<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/type"
        app:layout_constraintBottom_toBottomOf="@+id/spType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spType" />

    <TextView
        android:id="@+id/tvDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        app:layout_constraintBottom_toBottomOf="@+id/spDetails"
        app:layout_constraintStart_toStartOf="@+id/tvType"
        app:layout_constraintTop_toTopOf="@+id/spDetails" />

    <TextView
        android:id="@+id/tvValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value"
        app:layout_constraintBottom_toBottomOf="@+id/tlValue"
        app:layout_constraintStart_toStartOf="@+id/tvDetails"
        app:layout_constraintTop_toTopOf="@+id/tlValue" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_date"
        app:layout_constraintBottom_toBottomOf="@+id/etDate"
        app:layout_constraintStart_toStartOf="@+id/tvValue"
        app:layout_constraintTop_toTopOf="@+id/etDate" />

    <Spinner
        android:id="@+id/spType"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toEndOf="@+id/tvDate"
        app:layout_constraintTop_toTopOf="parent"
        style="@android:style/Widget.Holo.Light.Spinner"/>

    <Spinner
        android:id="@+id/spDetails"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/tvDate"
        app:layout_constraintTop_toBottomOf="@+id/spType"
        style="@android:style/Widget.Holo.Light.Spinner"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlValue"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/tvDate"
        app:layout_constraintTop_toBottomOf="@+id/spDetails">

        <com.google.android.material.textfield.TextInputEditText
            android:textColorHint="#1E1E1E"
            android:hint="@string/value_text_field_value"
            android:id="@+id/etValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/tvDate"
        app:layout_constraintTop_toBottomOf="@+id/tlValue"/>

    <Button
        android:id="@+id/btRegister"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/launch"
        app:layout_constraintStart_toStartOf="@+id/tvDate"
        app:layout_constraintTop_toBottomOf="@+id/etDate" />

    <Button
        android:id="@+id/btList"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/list_launches"
        app:layout_constraintStart_toStartOf="@+id/btRegister"
        app:layout_constraintTop_toBottomOf="@+id/btRegister" />

    <Button
        android:id="@+id/btBalance"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/balance"
        app:layout_constraintStart_toStartOf="@+id/btList"
        app:layout_constraintTop_toBottomOf="@+id/btList" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""

        android:ems="10"
        android:hint="@string/date_hint"
        android:inputType="date"
        android:textColorHint="#1E1E1E"
        app:layout_constraintStart_toStartOf="@+id/tlValue"
        app:layout_constraintTop_toBottomOf="@+id/tlValue" />

</androidx.constraintlayout.widget.ConstraintLayout>